--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -5,9 +5,9 @@ doctrine:
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '16'
-
-        profiling_collect_backtrace: '%kernel.debug%'
         use_savepoints: true
+        schema_filter: '~^(?!information_schema|performance_schema)~'
+        profiling_collect_backtrace: '%kernel.debug%'
     orm:
         auto_generate_proxy_classes: true
         enable_lazy_ghost_objects: true
