--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=
+APP_SECRET=CHANGE_ME_TO_RANDOM_STRING
 ###< symfony/framework-bundle ###
 
 ###> symfony/routing ###
@@ -31,9 +31,13 @@ DEFAULT_URI=http://localhost
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL="mysql://DB_USER:DB_PASSWORD@127.0.0.1:3306/DB_NAME?serverVersion=mariadb-10.6.21&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
+
+###> Spotify API ###
+SPOTIFY_CLIENT_ID=your_spotify_client_id
+SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
+###< Spotify API ###
 
 ###> symfony/messenger ###
 # Choose one of the transports below
